force-app/main/default/objects/Loan__c/fields/Bank_Customer__c.field-meta.xml
<CustomField>
    <fullName>Bank_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Customer</label>
    <referenceTo>Bank_Customer__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>