force-app/main/default/objects/Loan__c/fields/Intrest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Intrest_Rate__c</fullName>
    <label>Interest Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>