force-app/main/default/objects/Loan__c/fields/Tenure__c.field-meta.xml
<CustomField>
    <fullName>Tenure__c</fullName>
    <label>Tenure (Months)</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>